corrected terms and conditions spacing

--- a/packages/scandipwa/src/component/CheckoutBilling/CheckoutBilling.style.scss
+++ b/packages/scandipwa/src/component/CheckoutBilling/CheckoutBilling.style.scss
@@ -34,6 +34,12 @@
         display: flex;
         align-items: center;
 
+        &_isShifted {
+            flex-direction: column;
+            justify-content: center;
+            align-items: flex-start;
+        }
+
         @include mobile {
             font-size: 15px;
             margin-block-end: 28px;
@@ -68,6 +74,10 @@
         margin-inline-start: 0.5em;
         display: flex;
         cursor: pointer;
+
+        &_isShifted {
+            margin-inline-start: 35px;
+        }
 
         &:hover {
             text-decoration: underline;
